# docs/openapi/ou-ui-next-v1.yaml
@@ -2019,6 +2019,13 @@ components:
           type: string
           minLength: 1
           maxLength: 160
+        billingDirection:
+          type: string
+          enum:
+            - both
+            - single
+            - ingress
+            - egress
         sourceId:
           type: string
           minLength: 1
